@@ -1,6 +1,6 @@
 package trazzo.back.saasglobal.infrastructure.security;
 
-import java.util.stream.Collectors;
+import java.util.UUID;
 import lombok.RequiredArgsConstructor;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
@@ -9,6 +9,7 @@ import org.springframework.security.core.userdetails.UsernameNotFoundException;
 import org.springframework.stereotype.Service;
 import trazzo.back.saasglobal.application.port.out.UserRepositoryPort;
 import trazzo.back.saasglobal.domain.model.iam.User;
+import trazzo.back.shared.security.AuthenticatedUser;
 
 @Service
 @RequiredArgsConstructor
@@ -24,13 +25,13 @@ public class UserDetailsServiceImpl implements UserDetailsService {
 
         var authorities = user.getRoles().stream()
                 .map(role -> new SimpleGrantedAuthority("ROLE_" + role))
-                .collect(Collectors.toList());
+                .toList();
 
-        return org.springframework.security.core.userdetails.User.builder()
-                .username(user.getEmail())
-                .password(user.getPassword())
-                .authorities(authorities)
-                .disabled(!user.isActive())
-                .build();
+        return new AuthenticatedUser(
+                UUID.fromString(user.getId()),
+                user.getEmail(),
+                user.getPassword(),
+                authorities,
+                user.isActive());
     }
 }
